syntax = "proto3";

option java_multiple_files = true;

import "CommonMessages.proto";
import "Tokens.proto";
import "TokenStatusInfo.proto";

package org.niis.xroad.signer.proto;

service CertificateService {
  rpc ActivateCert (ActivateCertReq) returns (Empty) {}

  rpc GetCertificateInfoForHash (GetCertificateInfoForHashRequest) returns (GetCertificateInfoResponse) {}

  rpc GetMemberCerts (GetMemberCertsRequest) returns (GetMemberCertsResponse) {}

  rpc SetCertStatus (SetCertStatusRequest) returns (Empty) {}

  rpc RegenerateCertReq (RegenerateCertReqRequest) returns (RegenerateCertReqResponse) {}

  rpc DeleteCert (DeleteCertReq) returns (Empty) {}

  rpc DeleteCertRequest (DeleteCertRequestReq) returns (Empty) {}

  rpc ImportCert (ImportCertReq) returns (ImportCertResp) {}

  rpc GenerateSelfSignedCert (GenerateSelfSignedCertReq) returns (GenerateSelfSignedCertResp) {}
}

message GetCertificateInfoForHashRequest {
  string certHash = 1;
}

message GetCertificateInfoResponse {
  CertificateInfoProto certificateInfo = 1;
}

message ActivateCertReq {
  string certIdOrHash = 1;
  bool  active = 2;
}

message SetCertStatusRequest{
  string certId = 1;
  string status = 2;
}

message GetMemberCertsRequest{
  ClientIdProto memberId = 1;
}

message GetMemberCertsResponse{
  repeated CertificateInfoProto certs = 1;
}

message RegenerateCertReqRequest {//TODO:grpc consider swapping req and request places..
  string certRequestId = 1;
  CertificateRequestFormat format = 2;
}

message RegenerateCertReqResponse {
  string certReqId = 1;
  bytes certRequest = 2;
  CertificateRequestFormat format = 3;
  ClientIdProto memberId = 4;
  KeyUsageInfo keyUsage = 5;
}

/** Specifies the cert request format to return. */
enum CertificateRequestFormat {
  PEM = 0;
  DER = 1;
}

message DeleteCertReq {
  string certId = 1;
}

message DeleteCertRequestReq {
  string certRequestId = 1;
}

message ImportCertReq {
  bytes certData = 1;
  string initialStatus = 2;
  ClientIdProto memberId = 3;
}

message ImportCertResp {
  string keyId = 1;
}

message GenerateSelfSignedCertReq {
  string keyId = 1;
  string commonName = 2;
  int64 dateNotBefore = 3;
  int64 dateNotAfter = 4;
  KeyUsageInfo keyUsage = 5;
  ClientIdProto memberId = 6;
}

message GenerateSelfSignedCertResp {
  bytes certificateBytes = 1;
}
