syntax = "proto3";

option java_multiple_files = true;

import "CommonMessages.proto";
import "Tokens.proto";
import "TokenStatusInfo.proto";

package org.niis.xroad.signer.proto;

service TokenService {
  rpc GetTokenById (GetTokenByIdReq) returns (TokenInfoProto) {}

  rpc GetTokenByKey (GetTokenByKeyIdReq) returns (TokenInfoProto) {}

  rpc GetTokenAndKeyIdByCertRequestId (GetTokenByCertRequestIdReq) returns (TokenInfoAndKeyIdProto) {}

  rpc GetTokenAndKeyIdByCertHash (GetTokenByCertHashReq) returns (TokenInfoAndKeyIdProto) {}

  rpc ListTokens (Empty) returns (ListTokensResp) {}

  rpc ActivateToken (ActivateTokenReq) returns (Empty) {}

  rpc SetTokenFriendlyName (SetTokenFriendlyNameReq) returns (Empty) {}

  rpc GetTokenBatchSigningEnabled (GetTokenBatchSigningEnabledReq) returns (GetTokenBatchSigningEnabledResp){}

  rpc InitSoftwareToken (InitSoftwareTokenReq) returns (Empty) {}

  rpc UpdateSoftwareTokenPin (UpdateSoftwareTokenPinReq) returns (Empty) {}

  rpc GetHSMOperationalInfo  (Empty) returns (GetHSMOperationalInfoResp) {}

  rpc GetMemberSigningInfo (GetMemberSigningInfoReq) returns (GetMemberSigningInfoResp) {}
}

message ListTokensResp {
  repeated TokenInfoProto tokens = 1;
}

message ActivateTokenReq{
  string token_id = 1;
  bool activate = 2;
}

message GetTokenByIdReq {
  string token_id = 1;
}

message GetTokenByKeyIdReq {
  string key_id = 1;
}

message GetTokenByCertRequestIdReq {
  string cert_request_id = 1;
}

message GetTokenByCertHashReq {
  string cert_hash = 1;
}

message SetTokenFriendlyNameReq {
  string token_id = 1;
  string friendly_name = 2;
}

message GetTokenBatchSigningEnabledReq {
  string key_id = 1;
}

message GetTokenBatchSigningEnabledResp {
  bool batching_signing_enabled = 1;
}

message InitSoftwareTokenReq {
  string pin = 1;
}

message UpdateSoftwareTokenPinReq {
  string token_id = 1;
  string old_pin = 2;
  string new_pin = 3;
}

message GetHSMOperationalInfoResp {
  bool operational = 1;
}

message GetMemberSigningInfoReq {
  ClientIdProto member_id = 1;
}

message GetMemberSigningInfoResp {
  string key_id = 1;
  CertificateInfoProto cert = 2;
  string sign_mechanism_name = 3;
}
