syntax = "proto3";

//package protocol;

option java_multiple_files = true;
option java_package = "ee.ria.xroad.signer.protocol.dto";

//option java_outer_classname = "TokenStatusInfo";
//option objc_class_prefix = "HLW";

//import "google/protobuf/empty.proto";

/* Token status info DTO. */
enum TokenStatusInfo {
  TOKEN_STATUS_UNKNOWN = 0;
  OK = 1; // Normal operation status
  USER_PIN_LOCKED = 2;// Blocked
  USER_PIN_INCORRECT = 3; // Incorrect PIN was entered
  USER_PIN_INVALID = 4; // Invalid PIN
  USER_PIN_EXPIRED = 5; // PIN expired
  USER_PIN_COUNT_LOW = 6; // Only a few tries left
  USER_PIN_FINAL_TRY = 7; // Final try
  NOT_INITIALIZED = 8; // PIN not initialized
}
